--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -30,6 +30,7 @@
   "Armory": {
     "AlternateItems": "Alternate Versions",
     "Armory": "Armory",
+    "DifferentSeason": "Reissue from a different season",
     "NoNotes": "No Notes",
     "OpenInArmory": "view in Armory",
     "Season": "Season {{season}}, Year {{year}}",
