Show a list of alternate versions of an item in Armory (#11033)
Co-authored-by: chainrez <186519033+chainrez@users.noreply.github.com>

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -28,7 +28,9 @@
     "WeeklyHeroic": "Weekly Heroic Strike"
   },
   "Armory": {
+    "AlternateItems": "Alternate Versions",
     "Armory": "Armory",
+    "DifferentSeason": "Reissue from a different season",
     "NoNotes": "No Notes",
     "OpenInArmory": "view in Armory",
     "Season": "Season {{season}}, Year {{year}}",
