Add ammo and perk/mod grids columns

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1029,6 +1029,7 @@
     "BulkMoveLoadoutName": "Selected in Organizer",
     "BulkTag": "Tag",
     "Columns": {
+      "Ammo": "Ammo",
       "Archetype": "Archetype",
       "BaseStats": "Base Stats",
       "Breaker": "Breaker",
@@ -1041,13 +1042,13 @@
       "Harmonizable": "Harmonizable",
       "Icon": "Icon",
       "Intrinsics": "Intrinsic",
-      "KillTracker": "Kill Tracker",
+      "KillTracker": "Kills",
       "Level": "Level",
       "Loadouts": "Loadouts",
       "Location": "Location",
       "Locked": "Locked",
-      "MasterworkStat": "Masterwork Stat",
-      "MasterworkTier": "Masterwork Tier",
+      "MasterworkStat": "MW Stat",
+      "MasterworkTier": "MW Tier",
       "ModSlot": "Mod Slot",
       "Mods": "Mods",
       "Name": "Name",
@@ -1057,6 +1058,7 @@
       "OtherPerks": "Other Perks",
       "PercentComplete": "% Complete",
       "Perks": "Perks",
+      "PerksGrid": "Perks Grid",
       "PerksMods": "Perks & Mods",
       "Power": "Power",
       "Quality": "Quality %",
