--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -708,9 +708,9 @@
     "NoLoadoutsToCompare": "No loadouts to compare",
     "None": "None",
     "OptimizerExplanationGuide": "Read the User Guide for more info and a video tutorial.",
-    "OptimizerExplanationMods": "Choose an exotic, mods, and a subclass. Loadout Optimizer only includes stat bonuses from mods and subclass options you choose - all mods already on the armor are ignored.",
-    "OptimizerExplanationSearch": "Use the search bar to narrow down which armor to consider. If no armor matches the search in a slot, all armor in that slot will be considered.",
-    "OptimizerExplanationStats": "Drag the most important stats to the top, and disable stats you don't want to optimize for.",
+    "OptimizerExplanationMods": "Choose an exotic, mods, and a subclass. These will contribute stats to the build, while any mods already on the armor are ignored.",
+    "OptimizerExplanationSearch": "Use the search bar to narrow down which armor to consider. If no armor in a slot matches the search, the search will be ignored for that slot.",
+    "OptimizerExplanationStats": "Drag the most important stats to the top, and uncheck stats you don't want to maximize.",
     "OptimizerSet": "Optimizer Set",
     "PinnedItems": "Pinned Items",
     "ProcessingSets": "Finding highest tier sets...",
@@ -720,6 +720,7 @@
     "StatMax": "Max",
     "StatMin": "Min",
     "StatRangeTooltip": "With the current min/max setting, loadouts exist which have {{min}} to {{max}} points in this stat.",
+    "StatTotal": "Total: {{total}}",
     "TierNumber": "T{{tier}}",
     "TierSelect": "Select minimum stat tier",
     "UnableToAddAllMods": "Unable to add all mods.",
