Add a search for is:featured

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -242,6 +242,7 @@
     "Equipped": "Items that are currently equipped on a character.",
     "Event": "Shows items from which event in Destiny 2 they appeared in.",
     "ExtraPerk": "Shows random-rolled Legendary weapons with an additional selectable perk.",
+    "Featured": "Items that count as one of the \"Featured Items\" in the current season.",
     "Filter": "Filter",
     "FilterWith": "Filter with:",
     "Focusable": "Shows items that can be focused at a vendor",
@@ -719,7 +720,6 @@
     "StatRangeTooltip": "With the current min/max setting, loadouts exist which have {{min}} to {{max}} points in this stat. Double-click to set min to {{max}}.",
     "StatTotal": "Total: {{total}}",
     "TierNumber": "T{{tier}}",
-    "TierSelect": "Select minimum stat tier",
     "UnableToAddAllMods": "Unable to add all mods.",
     "UnableToAddAllModsBody": "There weren't enough mod slots available to fit {{mods}}.",
     "UnlockItem": "Unpin Item"
@@ -1059,7 +1059,6 @@
       "OtherPerks": "Other Perks",
       "PercentComplete": "% Complete",
       "Perks": "Perks",
-      "PerksGrid": "Perks Grid",
       "PerksMods": "Perks & Mods",
       "Power": "Power",
       "Quality": "Quality %",
@@ -1290,7 +1289,6 @@
     "ShieldHP": "Shield HP",
     "StrafingSpeed": "Strafing",
     "Strength": "Strength",
-    "Tier": "Tier {{tier}}",
     "TierProgress": "T{{tier}} {{statName}} ({{progress}}/60 for T{{nextTier}})\n",
     "TierProgress_Max": "T{{tier}} {{statName}} ({{progress}}/300)\n",
     "TimeToFullHP": "Time to Full HP",
