--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1059,7 +1059,6 @@
       "OtherPerks": "Other Perks",
       "PercentComplete": "% Complete",
       "Perks": "Perks",
-      "PerksGrid": "Perks Grid",
       "PerksMods": "Perks & Mods",
       "Power": "Power",
       "Quality": "Quality %",
@@ -1136,7 +1135,8 @@
   },
   "Records": {
     "Title": "Records",
-    "UniversalOrnamentSetOther": "Other"
+    "UniversalOrnamentSetOther": "Other",
+    "VexcaliburCatalyst": "Vexcalibur Catalyst"
   },
   "SearchHistory": {
     "Date": "Last Used",
