--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1059,6 +1059,7 @@
       "OtherPerks": "Other Perks",
       "PercentComplete": "% Complete",
       "Perks": "Perks",
+      "PerksGrid": "Perks Grid",
       "PerksMods": "Perks & Mods",
       "Power": "Power",
       "Quality": "Quality %",
