Add Ammo Generation stat

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1090,6 +1090,7 @@
     "Stats": {
       "Aim": "Aim",
       "Airborne": "Airborne",
+      "AmmoGeneration": "Ammo Gen",
       "Power": "Power",
       "RPM": "RPM",
       "Recoil": "Recoil",
