--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -957,6 +957,7 @@
     "AddToLoadout": "Loadout",
     "AddToLoadoutTitle": "Add this to a loadout",
     "All": "All",
+    "ArtifactBreaker": "This weapon has {{breaker}} because of an unlocked artifact perk.",
     "CannotCurrentlyRoll": "This perk cannot be rolled on the current version of this item.",
     "CantPullFromPostmaster": "You must visit the postmaster in game to retrieve this item.",
     "CatalystProgress": "Catalyst Progress",
@@ -974,6 +975,7 @@
     },
     "Infuse": "Infuse",
     "InfuseTitle": "Open the infusion fuel finder",
+    "IntrinsicBreaker": "This weapon intrinsically has {{breaker}}.",
     "LoadingSockets": "Perk and stat details have not loaded yet for this item.",
     "LockUnlock": {
       "AutoLock": "Lock state is synced to this item's tag",
