Add featured sort and organizer values

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1041,6 +1041,7 @@
       "Damage": "Damage",
       "Energy": "Energy",
       "Event": "Event",
+      "Featured": "Featured",
       "Foundry": "Foundry",
       "Harmonizable": "Harmonizable",
       "Icon": "Icon",
@@ -1213,6 +1214,7 @@
     "SortByClassType": "Required Class",
     "SortByCrafted": "Crafted (D2)",
     "SortByDeepsight": "Deepsight (D2)",
+    "SortByFeatured": "Featured (D2)",
     "SortByPrimary": "Power level",
     "SortByRarity": "Rarity",
     "SortByRating": "Armor Quality (D1)",
