Add tier to Organizer

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1047,6 +1047,7 @@
       "Harmonizable": "Harmonizable",
       "Icon": "Icon",
       "Intrinsics": "Intrinsic",
+      "ItemTier": "Tier",
       "KillTracker": "Kills",
       "Level": "Level",
       "Loadouts": "Loadouts",
@@ -1075,7 +1076,7 @@
       "StatQualityStat": "{{stat}}%",
       "Stats": "Stats",
       "Tag": "Tag",
-      "Tier": "Tier",
+      "Tier": "Rarity",
       "Traits": "Weapon Traits",
       "WishList": "Wish List",
       "WishListNotes": "Wish List Notes",
